# Connect4-CDP

./: .env.example  .gitignore  README.md  docker-compose.yml
backend_django/: .dockerignore  Dockerfile  pyproject.toml
backend_django/game/: admin.py  apps.py  consumers.py  game_logic.py  minimax_bot.py  models.py  routing.py  serializers.py  tests.py  urls.py  views.py
backend_django/game/migrations/: 0001_initial.py  0002_room_board_room_current_turn.py  0003_room_game_status_room_winner_and_more.py  0004_room_bot_fields.py
backend_django/game_server/: asgi.py  serializers.py  settings.py  urls.py  views.py
backend_django/player/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend_django/player/migrations/: 0001_initial.py  0002_remove_player_id_alter_player_user.py
frontend_react/: .dockerignore  .env  Dockerfile  index.html  package-lock.json  package.json
frontend_react/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
frontend_react/src/api/: auth.ts  client.ts  game.ts
frontend_react/src/auth/: AuthContext.ts  AuthContext.tsx  AuthProvider.tsx  useAuth.ts
frontend_react/src/components/: Connect4Board.tsx  FormInput.tsx  MainButton.tsx  SecondaryButton.tsx  SubmitButton.tsx
frontend_react/src/pages/: Home.tsx  Login.tsx  Register.tsx
frontend_react/src/routes/: ProtectedRoute.tsx  PublicRoute.tsx
reverse_proxy/: nginx.conf
